use prompt template to add new param and all other changes through the layers
